<resources>

    <string name="app_name">CyclApp</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_main">CycleApp</string>
    <string name="map_name">Map</string>
    <string name="preferences_name">Settings</string>
    <string name="about_name">About CyclApp</string>

    <!-- About Screen -->
    <string name="about_text">CyclApp is an Android application created to aid cyclists. It has been developed as a third year project by a student from the University of Sussex\'s Informatics Undergraduate department.</string>

    <!-- SatNav Screen -->
    <string name="location_label">not found &#8230;</string>
    <string name="find_location_title">Location:</string>
    <string name="view_map_button_label">View Map</string>
    <string name="find_speed_title">Speed:</string>
    <string name="speed_label">not found &#8230;</string>
    <string name="start_stop_button_label">Start</string>
    <string name="pause_button_label">Pause</string>
    <string name="distance_so_far_title">Distance Travelled:</string>
    <string name="distance_so_far_label">Press start!</string>
    <string name="timer_title">Trip Time</string>
    <string name="timer_label">Press start!</string>
    <string name="average_speed_title">Average speed:</string>
    <string name="average_speed_label">Press start!</string>

    <!-- Home Screen -->
    <string name="title_activity_home">CycleApp bithes!</string>
    <string name="home_title">Home</string>
    <string name="sat_nav_button_label">Satelite Navigation</string>
    <string name="view_past_rides_button_label">History</string>
    <string name="about_button_label">About</string>
    <string name="exit_button_label">Exit</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_history">History</string>

    <!-- History Screen -->
    <string name="content_1_label">Enter content of column 1</string>
    <string name="content_2_label">Enter content of column 2</string>
    <string name="add_button_label">Add</string>
    <string name="deleteall_button_label">Delete All</string>
    <string name="sort_default_button_label">Sort By default</string>
    <string name="sort_1_button_label">Sort By Content 2</string>
    <string name="title_activity_about">About</string>

</resources>